--- a/inject.css
+++ b/inject.css
@@ -2,7 +2,8 @@
   display: none !important;
 }
 .vsc-hidden {
-  display: none !important;
+  visibility: visible !important;
+  opacity: 1 !important;
 }
 .vsc-manual {
   visibility: visible !important;
@@ -17,9 +18,8 @@
 }
 
 .ytp-autohide .vsc-controller {
-  visibility: hidden;
-  transition: opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
+  visibility: visible;
+  opacity: 1;
 }
 
 .ytp-autohide .vcs-show {
