--- a/popup.css
+++ b/popup.css
@@ -32,3 +32,20 @@ button {
 .hide {
   display: none;
 }
+
+#chooseFile {
+  display: none;
+}
+
+.fileLabel:hover {
+  cursor: pointer;
+}
+
+.fileLabel {
+  background-color: white;
+  border-radius: 15px;
+  font-size: 14px;
+  color: black;
+  padding: 2px 5px;
+  font-weight: 900;
+}
