--- a/shadow.css
+++ b/shadow.css
@@ -1,132 +1,135 @@
 * {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 :host(:hover) #controls {
-  display: block;
+    display: block;
 }
 
 :host(:hover) .prev-next-button {
-  display: inline;
-  margin: 5px 5px;
+    display: inline;
+    margin: 5px 5px;
 }
 
 .prev-next-button {
-  display: none;
-  text-decoration: none;
-  font-weight: 900;
-  background-color: transparent;
-  color: white;
-  border: none;
+    display: none;
+    text-decoration: none;
+    font-weight: 900;
+    background-color: transparent;
+    color: white;
+    border: none;
 }
 
 #controller {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  text-align: center;
-  background: transparent;
-  color: white;
-  border-radius: 30px;
-  padding: 6px 12px 6px 12px;
-  cursor: default;
-  z-index: 9999999;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    background: transparent;
+    color: white;
+    border-radius: 30px;
+    padding: 6px 12px 6px 12px;
+    cursor: default;
+    z-index: 9999999;
+}
+
+.subtitles-centered {
+    right: 0;
 }
 
 #controller:hover {
-  opacity: 0.7;
+    opacity: 0.7;
 }
 
 #controls {
-  display: none;
-  margin: 5px;
+    display: none;
+    margin: 5px;
 }
 
 #controller.dragging {
-  cursor: -webkit-grabbing;
-  opacity: 0.7;
+    cursor: -webkit-grabbing;
+    opacity: 0.7;
 }
 
 #controller.dragging #controls {
-  display: block;
+    display: block;
 }
 
 #controller.dragging .prev-next-button {
-  display: inline;
+    display: inline;
 }
 
 .draggable {
-  cursor: -webkit-grab;
-  display: inline;
+    cursor: -webkit-grab;
+    display: inline;
 }
 
 .draggable:active {
-  cursor: -webkit-grabbing;
+    cursor: -webkit-grabbing;
 }
 
 #background-div {
-  background-color: black;
-  display: inline-block;
-  border-radius: 40px;
-  padding: 5px 20px;
+    background-color: black;
+    display: inline-block;
+    border-radius: 40px;
+    padding: 5px 20px;
 }
 
-#controls > button {
-  opacity: 1;
-  cursor: pointer;
-  color: black;
-  background: white;
-  font-weight: normal;
-  border-radius: 20px;
-  padding: 1px 5px 3px 5px;
-  font-size: 14px;
-  line-height: 14px;
-  border: 0px solid white;
-  font-family: "Lucida Console", Monaco, monospace;
-  margin: 0px 2px 2px 2px;
-  transition: background 0.2s, color 0.2s;
+#controls>button {
+    opacity: 1;
+    cursor: pointer;
+    color: black;
+    background: white;
+    font-weight: normal;
+    border-radius: 20px;
+    padding: 1px 5px 3px 5px;
+    font-size: 14px;
+    line-height: 14px;
+    border: 0px solid white;
+    font-family: "Lucida Console", Monaco, monospace;
+    margin: 0px 2px 2px 2px;
+    transition: background 0.2s, color 0.2s;
 }
 
 button:focus {
-  outline: 0;
+    outline: 0;
 }
 
 button:hover {
-  opacity: 1;
-  background: #2196f3;
-  color: #ffffff;
-  cursor: pointer;
+    opacity: 1;
+    background: #2196f3;
+    color: #ffffff;
+    cursor: pointer;
 }
 
 button:active {
-  background: #2196f3;
-  color: #ffffff;
-  font-weight: bold;
+    background: #2196f3;
+    color: #ffffff;
+    font-weight: bold;
 }
 
 button.rw {
-  opacity: 1;
+    opacity: 1;
 }
 
 button.hideButton {
-  opacity: 0.65;
-  margin-right: 2px;
+    opacity: 0.65;
+    margin-right: 2px;
 }
 
 #chooseFile {
-  display: none;
+    display: none;
 }
 
 .fileLabel:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .fileLabel {
-  background-color: white;
-  border-radius: 15px;
-  font-size: 14px;
-  color: black;
-  padding: 2px 5px;
-  font-weight: 900;
+    background-color: white;
+    border-radius: 15px;
+    font-size: 14px;
+    color: black;
+    padding: 2px 5px;
+    font-weight: 900;
 }
