--- a/popup.css
+++ b/popup.css
@@ -6,7 +6,7 @@ hr {
     width: 100%;
     border: 0;
     height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    border-top: 1px solid rgba(122, 122, 122, 0.3);
     margin: 0.6em 0;
 }
 
@@ -78,7 +78,14 @@ hr {
 }
 
 .sync-input {
-    width: 30px;
+    border: none;
+    width: 45px;
+    margin-left: 15px;
+    font-size: 16px;
+}
+
+.sync-input:focus {
+    outline: none !important;
 }
 
 .flex-container {
@@ -88,4 +95,21 @@ hr {
 
 #refresh-popup-icon:hover {
     cursor: pointer;
+}
+
+#error-message {
+    margin: 10px 30px;
+    font-size: 16px;
+}
+
+.range-field {
+    margin-left: 20px;
+    width: 155px;
+    display: inline-block;
+}
+
+.input-field {
+    margin-left: 20px;
+    margin-right: 30px;
+    font-size: 16px;
 }
