Adding a success message after syncing the subtitles. It might still be buggy. I'll probably have to make it more stable

--- a/shadow.css
+++ b/shadow.css
@@ -125,3 +125,12 @@ button.hideButton {
     padding: 2px 5px;
     font-weight: 900;
 }
+
+#synced {
+    color: rgb(0, 255, 0);
+    font-size: 14px;
+}
+
+.hide {
+    display: none;
+}
