--- a/shadow.css
+++ b/shadow.css
@@ -27,13 +27,14 @@
     z-index: 9999998;
 }
 
-#movie-settings {
+#subtitle-settings {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 800px;
+    max-width: 100%;
     height: 300px;
-    background-color: blueviolet;
+    background-color: white;
     z-index: 9999999;
 }
 
