--- a/shadow.css
+++ b/shadow.css
@@ -27,15 +27,32 @@
     z-index: 9999998;
 }
 
-#subtitle-settings {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 800px;
+#settings-wrapper {
+    position: relative;
+    background-color: white;
+    color: black;
+    width: 600px;
     max-width: 100%;
     height: 300px;
-    background-color: white;
+    margin: auto;
     z-index: 9999999;
+}
+
+#settings-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.settings-item {
+    margin: 10px;
+}
+
+#settings-title {
+    font-size: 28px;
+}
+
+#settings-close {
+    font-size: 16px;
 }
 
 .subtitles-centered {
