Fixing some bugs regarding the video icon and getting rid of the annoying text highlighting when dragging the subtitles

--- a/shadow.css
+++ b/shadow.css
@@ -176,6 +176,9 @@ button:hover {
 #subtitles {
     margin-left: 0;
     margin-right: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 #video-img {
