--- a/shadow.css
+++ b/shadow.css
@@ -131,17 +131,8 @@ button:hover {
     display: none;
 }
 
-.fileLabel:hover {
-    cursor: pointer;
-}
-
 .fileLabel {
-    background-color: white;
-    border-radius: 15px;
-    font-size: 14px;
-    color: black;
-    padding: 2px 5px;
-    font-weight: 900;
+    background-color: yellowgreen;
 }
 
 #synced {
@@ -185,12 +176,12 @@ button:hover {
     font-size: 16px;
     font-weight: 600;
     color: black;
-    cursor: pointer;
 }
 
 .menu-item {
     padding: 10px 15px 10px 30px;
     border-right: 1px solid rgb(189, 189, 189);
+    cursor: pointer;
 }
 
 .menu-item:hover {
@@ -234,6 +225,7 @@ button:hover {
 
 #bottom-space {
     height: 20px;
+    width: 170.45px;
 }
 
 #subtitle-content {
