--- a/shadow.css
+++ b/shadow.css
@@ -40,9 +40,7 @@ p {
 }
 
 #settings-wrapper {
-    position: relative;
-    display: inline-block;
-    text-align: center;
+    position: absolute;
     background-color: rgba(255, 255, 255, 0.795);
     color: black;
     width: 90%;
