--- a/shadow.css
+++ b/shadow.css
@@ -6,6 +6,12 @@
     --active-grey: rgb(211, 210, 210);
 }
 
+i {
+    /* This makes the i tag unclickable which allows me to click the element beneath it
+       which in this case is the subtitle div which can be dragged this way */
+    pointer-events: none;
+}
+
 hr {
     width: 100%;
     border: 0;
@@ -34,7 +40,6 @@ p {
     position: absolute;
     width: 100%;
     overflow: visible;
-    pointer-events: none;
     background: none !important;
     text-align: center;
     color: white;
@@ -102,14 +107,12 @@ p {
 #subtitle-div {
     background-color: rgba(0, 0, 0, 0);
     display: inline-block;
-    pointer-events: auto;
     border-radius: 40px;
     padding: 5px 10px;
 }
 
 #below-subtitles {
     display: inline-block;
-    pointer-events: auto;
     border-radius: 40px;
     padding: 5px 10px;
 }
