--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,5 @@
 body {
-    width: 300px;
+    width: 280px;
     --red: #c62828;
     --red-disabled: #c62828a1;
 }
@@ -9,7 +9,7 @@ hr {
     border: 0;
     height: 0;
     border-top: 1px solid rgba(122, 122, 122, 0.3);
-    margin: 0.6em 0;
+    margin: 0;
 }
 
 .secondary {
@@ -56,8 +56,9 @@ hr {
 }
 
 .menu {
-    font-size: 14px;
+    font-size: 15px;
     color: black !important;
+    padding: 20px !important;
 }
 
 .menu-heading {
@@ -92,11 +93,6 @@ hr {
     outline: none !important;
 }
 
-.flex-container {
-    display: flex;
-    justify-content: space-around;
-}
-
 .message {
     margin: 10px 30px;
     font-size: 16px;
@@ -129,4 +125,68 @@ hr {
 
 .no-video-detected > h3 {
     color: var(--red-disabled) !important;
+}
+
+.space {
+    margin-bottom: 15px;
+}
+
+.shortcut {
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    color: black !important;
+    cursor: pointer;
+    padding: 20px;
+}
+
+.shortcut:hover {
+    background-color: rgb(235, 235, 235);
+}
+
+input {
+    width: 30px; /* It has to be that big because otherwise you can't see the cursor when the element is focused */
+    height: 20px;
+    background: transparent;
+    border: none;
+    margin-left: 32px;
+    font-size: 16px;
+    outline: none;
+    text-align: center;
+}
+
+input:focus {
+    border-bottom: 1px solid black;
+}
+
+.label {
+    width: 130px;
+    white-space: nowrap;
+}
+
+input::-webkit-input-placeholder {
+    color: rgb(175, 175, 175);
+    opacity: 1;
+    font-size: 15px;
+}
+
+.arrow {
+    font-size: 24px !important;
+    line-height: unset;
+}
+
+.arrow::-webkit-input-placeholder {
+    font-size: 24px !important;
+    line-height: unset;
+}
+
+#shortcut-back {
+    position: absolute;
+    top: 23px;
+    left: 15px;
+    cursor: pointer;
+}
+
+#shortcut-settings {
+    height: 100%;
 }
