Displaying speed changes even when the the subtitles are hidden

--- a/shadow.css
+++ b/shadow.css
@@ -177,6 +177,13 @@ button:hover {
     z-index: 99999999;
 }
 
+#speed-indicator {
+    position: absolute;
+    top: 60px;
+    left: 10px;
+    z-index: 99999999;
+}
+
 #subtitles {
     display: inline-block;
     margin-left: 0;
