--- a/materialize/sass/components/_variables.scss
+++ b/materialize/sass/components/_variables.scss
@@ -30,7 +30,7 @@
 //  24. Progress Bar
 // 1. Colors
 // ==========================================================================
-$primary-color: color("materialize-red", "lighten-2") !default;
+$primary-color: color("red", "darken-2") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 $secondary-color: color("deep-orange", "accent-2") !default;
@@ -161,7 +161,7 @@ $select-padding: 5px !default;
 $select-radius: 2px !default;
 $select-disabled-color: rgba(0, 0, 0, .3) !default;
 // Switches
-$switch-bg-color: $secondary-color !default;
+$switch-bg-color: $primary-color !default;
 $switch-checked-lever-bg: desaturate(lighten($switch-bg-color, 25%), 25%) !default;
 $switch-unchecked-bg: #F1F1F1 !default;
 $switch-unchecked-lever-bg: rgba(0, 0, 0, .38) !default;
