--- a/shadow.css
+++ b/shadow.css
@@ -344,7 +344,7 @@ button:hover {
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px 10px;
     position: absolute;
     z-index: 1;
     bottom: 125%;
