--- a/shadow.css
+++ b/shadow.css
@@ -28,13 +28,13 @@ p {
 
 .subtitle-button {
     display: inline-block;
-    font-weight: 900;
     background-color: transparent;
+    font-weight: 900;
+    margin: 5px;
     color: white;
     border: none;
+    user-select: none;
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
 }
 
 #controller {
@@ -97,26 +97,20 @@ p {
     margin: 0;
 }
 
-#controls {
-    display: none;
-    margin: 5px;
-}
-
 #controller.dragging {
     cursor: -webkit-grabbing;
 }
 
 #subtitle-div {
-    background-color: rgba(0, 0, 0, 0);
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 40px;
-    padding: 5px 10px;
+    max-width: 90%;
 }
 
 #below-subtitles {
     display: inline-block;
-    border-radius: 40px;
-    padding: 5px 10px;
 }
 
 button:focus {
@@ -191,6 +185,7 @@ button:hover {
     display: inline-block;
     margin-left: 0;
     margin-right: 0;
+    user-select: none;
     -webkit-user-select: none;
 }
 
