Finished the discovery feature

--- a/shadow.css
+++ b/shadow.css
@@ -1,9 +1,7 @@
 * {
     font-family: sans-serif;
     --red: #C62828;
-    --orange: #f0653b;
-    --active-orange: #ff754b;
-    --active-grey: rgb(211, 210, 210);
+    --orange: #ec7903;
     --menu-font-size: 17px;
     --subtitle-margin: 5px;
 }
@@ -150,6 +148,29 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+#feature-discovery {
+    position: relative;
+    background: linear-gradient(to right, rgb(255 135 0), rgb(210 179 122));
+    top: -500px;
+    left: -500px;
+    height: 1000px;
+    width: 1000px;
+    border-radius: 100%;
+    z-index: 9999999;
+}
+
+.discovery-text-block {
+    position: relative; 
+    top: 570px;
+    left: 590px;
+    color: white;
+}
+
+.discovery-text {
+    font-size: 25px;
+    line-height: 50px;
+}
+
 #skip-music {
     color: rgb(255, 142, 50);
     cursor: pointer;
@@ -180,7 +201,24 @@ button:hover {
     top: 15px;
     left: 15px;
     cursor: pointer;
+    line-height: 0;  /* Necessary to prevent the bottom border from sticking out while the animation is running */
     z-index: 99999999;
+}
+
+@keyframes glowing {
+    0% {
+        box-shadow: 0 0 5px;
+    }
+    50% {
+        box-shadow: 0 0 10px 10px;
+    }
+    100% {
+        box-shadow: 0 0 5px;
+    }
+}
+
+.blinking-icon {
+    animation: glowing 1300ms infinite;
 }
 
 #subtitles {
@@ -237,21 +275,13 @@ button:hover {
 }
 
 .subtitle-search-button {
-    color: rgb(235, 235, 235);
+    color: white;
     background-color: var(--orange);
 }
 
 .subtitle-upload-button {
     color: rgb(30,30,30); 
     background-color: rgb(200,200,200);
-}
-
-.subtitle-search-button:hover {
-    background-color: var(--active-orange);
-}
-
-.subtitle-upload-button:hover {
-    background-color: var(--active-grey);
 }
 
 #centered-box {
