--- a/popup.css
+++ b/popup.css
@@ -1,196 +1,225 @@
 body {
-    width: 280px;
-    --red: #c62828;
-    --red-disabled: #c62828a1;
+  width: 280px;
+  --red: #c62828;
+  --red-disabled: #c62828a1;
 }
 
 hr {
-    width: 100%;
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(122, 122, 122, 0.3);
-    margin: 0;
+  width: 100%;
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(122, 122, 122, 0.3);
+  margin: 0;
 }
 
 .secondary {
-    font-size: 0.95em;
-    margin: 0.15em 0;
+  font-size: 0.95em;
+  margin: 0.15em 0;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .heading {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 24px;
-    font-weight: 400;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
 }
 
 .centered-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .power-button {
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    cursor: pointer;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .turn-off:hover {
-    color: rgb(194, 5, 5);
+  color: rgb(194, 5, 5);
 }
 
 .turn-on:hover {
-    color: rgb(8, 140, 216);
+  color: rgb(8, 140, 216);
 }
 
 .menu {
-    font-size: 15px;
-    color: black !important;
-    padding: 20px !important;
+  font-size: 15px;
+  color: black !important;
+  padding: 20px !important;
 }
 
 .menu-heading {
-    font-size: 16px;
-    color: var(--red);
-    margin-left: 20px;
-    font-weight: 500;
-    margin-top: 10px;
-    margin-bottom: 0;
+  font-size: 16px;
+  color: var(--red);
+  margin-left: 20px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .default-cursor {
-    cursor: default;
+  cursor: default;
 }
 
 .pointer-cursor {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .hide {
-    display: none;
+  display: none;
+}
+
+#sync-now {
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .sync-input {
-    border: none;
-    width: 45px;
-    margin-left: 15px;
-    font-size: 16px;
+  border: none;
+  width: 45px;
+  margin-left: 15px;
+  font-size: 16px;
+  position: relative;
+  top: -5px;
 }
 
 .sync-input:focus {
-    outline: none !important;
+  outline: none !important;
 }
 
 .message {
-    margin: 10px 30px;
-    font-size: 16px;
+  margin: 10px 30px;
+  font-size: 16px;
 }
 
 .range-field {
-    margin-left: 20px;
-    width: 155px;
-    display: inline-block;
+  margin-left: 20px;
+  width: 155px;
+  display: inline-block;
+}
+
+#range-block {
+  margin-top: -2px;
+  margin-bottom: -7px;
+}
+
+.sync-sec-display {
+  display: inline-block;
+  font-size: 16px;
+  position: relative;
+  top: -5px;
 }
 
 .input-field {
-    margin-left: 20px;
-    margin-right: 30px;
-    font-size: 16px;
+  margin-left: 20px;
+  margin-right: 30px;
+  margin-top: 9px !important;
+  margin-bottom: 9px !important;
+  font-size: 16px;
 }
 
 .no-video-detected {
-    color:grey !important;
-    cursor: default;
+  color: grey !important;
+  cursor: default;
 }
 
 .no-video-detected > span {
-    color: rgb(192, 192, 192) !important;
+  color: rgb(192, 192, 192) !important;
 }
 
 .no-video-detected:hover {
-    background-color: white !important;
+  background-color: white !important;
 }
 
 .no-video-detected > h3 {
-    color: var(--red-disabled) !important;
+  color: var(--red-disabled) !important;
 }
 
 .space {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+}
+
+.shortcut-input {
+  text-align: center;
 }
 
 .shortcut {
-    display: flex;
-    justify-content: space-between;
-    font-size: 15px;
-    color: black !important;
-    cursor: pointer;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  color: black !important;
+  cursor: pointer;
+  padding: 20px;
 }
 
 .shortcut:hover {
-    background-color: rgb(235, 235, 235);
+  background-color: rgb(235, 235, 235);
 }
 
 input {
-    width: 30px; /* It has to be that big because otherwise you can't see the cursor when the element is focused */
-    height: 20px;
-    background: transparent;
-    border: none;
-    margin-left: 32px;
-    font-size: 16px;
-    outline: none;
-    text-align: center;
+  width: 30px; /* It has to be that big because otherwise you can't see the cursor when the element is focused */
+  height: 20px;
+  background: transparent;
+  border: none;
+  margin-left: 32px;
+  font-size: 16px;
+  outline: none;
 }
 
 input:focus {
-    border-bottom: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .label {
-    width: 130px;
-    white-space: nowrap;
+  width: 130px;
+  white-space: nowrap;
 }
 
 input::-webkit-input-placeholder {
-    color: rgb(175, 175, 175);
-    opacity: 1;
-    font-size: 15px;
+  color: rgb(175, 175, 175);
+  opacity: 1;
+  font-size: 15px;
 }
 
 .arrow {
-    font-size: 24px !important;
-    line-height: unset;
+  font-size: 24px !important;
+  line-height: unset;
 }
 
 .arrow::-webkit-input-placeholder {
-    font-size: 24px !important;
-    line-height: unset;
+  font-size: 24px !important;
+  line-height: unset;
 }
 
 #shortcut-back {
-    position: absolute;
-    top: 23px;
-    left: 15px;
-    cursor: pointer;
+  position: absolute;
+  top: 23px;
+  left: 15px;
+  cursor: pointer;
 }
 
 #shortcut-settings {
-    height: 100%;
+  height: 100%;
 }
 
 .switch {
-    margin-right: -18px; 
+  margin-right: -18px;
 }
